--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- Escreva seu código aqui! -->
+  <h1>Nem tudo que reluz é ouro.</h1>
 </body>
 </html>
