--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Nem tudo que reluz é ouro.</h1>
+  <!-- ======================================= Header ======================================================= -->
+  <header>
+    
+  </header>
+  <!-- ======================================= Main ======================================================= -->
+  <main>
+
+  </main>
+  <!-- ======================================= footer ======================================================= -->
+  <footer>
+
+  </footer>
 </body>
 </html>
