--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>petshopdh</title>
 </head>
 <body>
-  <h1>Nem tudo que reluz é ouro.</h1>
+
+  <header >
+    <img src="/petshopdh/img/logo-white.png" alt="Logo" />
+    <button type="button" class="hamburguer-menu">
+        <img src="/petshopdh/img/hamburger-icon.png" alt="Hamburguer Menu" />
+    </button>
+    <nav class="navbar">
+        <a href="#">
+            Home                                
+        </a>
+        <a href="#">
+            Entra                                
+        </a>
+        <a href="#">
+            Cadastrar                               
+        </a>
+                
+    </nav>
+</header> 
 </body>
 </html>
